--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,8 @@
 DATABASE_HOSTNAME=localhost
-DATABASE_PORT=no
-DATABASE_PASSWORD=no
-DATABASE_NAME=no
-DATABASE_USERNAME=no
+DATABASE_PORT=1111
+DATABASE_PASSWORD=aaa
+DATABASE_NAME=aaa
+DATABASE_USERNAME=aaa
 SECRET_KEY="abc"
 ALGORITHM="HS256"
 ACCESS_TOKEN_EXPIRE_MINUTES=30
