--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -15,7 +15,7 @@ jobs:
           cp .env.test .env
           pytest
 
-  deploy:
+deploy:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
@@ -36,19 +36,19 @@ jobs:
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
           
-          # Decode and save the key
-          echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          # Decode and save the key with correct name
+          echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/github_actions_key
+          chmod 600 ~/.ssh/github_actions_key
           
           # Start ssh-agent
           eval $(ssh-agent -s)
           
           # Add key with passphrase using expect
-          expect << EOF
-          spawn ssh-add ~/.ssh/id_rsa
-          expect "Enter passphrase"
-          send "$SSH_KEY_PASSPHRASE\r"
-          expect eof
+          expect << 'EOF'
+            spawn ssh-add ~/.ssh/github_actions_key
+            expect "Enter passphrase"
+            send "$env(SSH_KEY_PASSPHRASE)\r"
+            expect eof
           EOF
           
           # Add known hosts
@@ -57,7 +57,7 @@ jobs:
           
           # Deploy with sshpass for the second factor (user password)
           sshpass -p "$USER_PASSWORD" ssh -o PreferredAuthentications=publickey,keyboard-interactive \
-            -p 6996 stefan@100.76.67.39 'bash -s' << 'ENDSSH'
+            -i ~/.ssh/github_actions_key -p 6996 stefan@100.76.67.39 'bash -s' << 'ENDSSH'
             set -e
             cd app/api
             git pull
