--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -16,63 +16,29 @@ jobs:
           pytest
 
   deploy:
-      runs-on: ubuntu-latest
-      needs: [build]
-      steps:
-        - uses: tailscale/github-action@v2
-          with:
-            authkey: ${{ secrets.AUTH_KEY }}
-        
-        - name: Deploy
-          env:
-            SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-            SSH_KEY_PASSPHRASE: ${{ secrets.SSH_KEY_PASSPHRASE }}
-            SUDO_PASSWORD: ${{ secrets.SUDO_PASSWORD }}
-            USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
-          run: |
-            # Install necessary tools
-            sudo apt-get update && sudo apt-get install -y expect sshpass
-            
-            mkdir -p ~/.ssh
-            chmod 700 ~/.ssh
-            
-            # Decode and save the key - use printf to avoid newline issues
-            printf "%s" "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/github_actions_key
-            chmod 600 ~/.ssh/github_actions_key
-            
-            # Verify the key was created and has content
-            if [ ! -s ~/.ssh/github_actions_key ]; then
-              echo "ERROR: SSH key file is missing or empty"
-              ls -la ~/.ssh/
-              exit 1
-            fi
-            
-            echo "Key file created successfully:"
-            ls -lh ~/.ssh/github_actions_key
-            
-            # Start ssh-agent
-            eval $(ssh-agent -s)
-            
-            # Get the full path for expect
-            KEY_PATH="$HOME/.ssh/github_actions_key"
-            
-            # Add key with passphrase using expect
-            SSH_KEY_PASSPHRASE="$SSH_KEY_PASSPHRASE" /usr/bin/expect << 'EOF'
-            spawn ssh-add $env(HOME)/.ssh/github_actions_key
-            expect "Enter passphrase"
-            send "$env(SSH_KEY_PASSPHRASE)\r"
-            expect eof
-            EOF
-            
-            # Add known hosts
-            ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts
-            chmod 644 ~/.ssh/known_hosts
-            
-            # Deploy with sshpass for the second factor (user password)
-            sshpass -p "$USER_PASSWORD" ssh -o PreferredAuthentications=publickey,keyboard-interactive \
-              -i ~/.ssh/github_actions_key -p 6996 stefan@100.76.67.39 'bash -s' << 'ENDSSH'
-              set -e
-              cd app/api
-              git pull
-              echo '${{ secrets.SUDO_PASSWORD }}' | sudo -S systemctl restart fastapi
-            ENDSSH
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - uses: tailscale/github-action@v2
+        with:
+          authkey: ${{ secrets.AUTH_KEY }}
+      
+      - name: Deploy
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SUDO_PASSWORD: ${{ secrets.SUDO_PASSWORD }}
+        run: |
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
+          
+          ssh -i ~/.ssh/id_rsa -p 6996 stefan@100.76.67.39 'bash -s' << 'ENDSSH'
+            set -e
+            cd app/api
+            git pull
+            echo '${{ secrets.SUDO_PASSWORD }}' | sudo -S systemctl restart fastapi
+          ENDSSH
+          
