--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -1,52 +1,70 @@
-deploy:
-  runs-on: ubuntu-latest
-  needs: [build]
-  steps:
-    - uses: tailscale/github-action@v2
-      with:
-        authkey: ${{ secrets.AUTH_KEY }}
-    
-    - name: Deploy
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SUDO_PASSWORD: ${{ secrets.SUDO_PASSWORD }}
-      run: |
-        mkdir -p ~/.ssh
-        chmod 700 ~/.ssh
-        echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts
-        chmod 644 ~/.ssh/known_hosts
-        
-        ssh -i ~/.ssh/id_rsa -p 6996 stefan@100.76.67.39 'bash -s' << 'ENDSSH'
-          set -e
-          echo "=== Current directory ==="
-          pwd
+name: Build and deploy code
+on: [push, pull_request]   
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.11"
+      - run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
+          cp .env.test .env
+          pytest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - uses: tailscale/github-action@v2
+        with:
+          authkey: ${{ secrets.AUTH_KEY }}
+      
+      - name: Deploy
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SUDO_PASSWORD: ${{ secrets.SUDO_PASSWORD }}
+        run: |
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
           
-          echo "=== Navigating to app/api ==="
-          cd app/api
-          pwd
-          
-          echo "=== Current git status BEFORE pull ==="
-          git status
-          git log -1 --oneline
-          
-          echo "=== Pulling latest changes ==="
-          git pull
-          
-          echo "=== Git status AFTER pull ==="
-          git status
-          git log -1 --oneline
-          
-          echo "=== Checking if service exists ==="
-          systemctl list-units --type=service | grep fastapi || echo "Service not found!"
-          
-          echo "=== Restarting FastAPI service ==="
-          echo '${{ secrets.SUDO_PASSWORD }}' | sudo -S systemctl restart fastapi
-          
-          echo "=== Service status ==="
-          echo '${{ secrets.SUDO_PASSWORD }}' | sudo -S systemctl status fastapi --no-pager
-          
-          echo "=== Recent service logs ==="
-          echo '${{ secrets.SUDO_PASSWORD }}' | sudo -S journalctl -u fastapi -n 20 --no-pager
-        ENDSSH
+          ssh -i ~/.ssh/id_rsa -p 6996 stefan@100.76.67.39 'bash -s' << 'ENDSSH'
+            set -e
+            echo "=== Current directory ==="
+            pwd
+            
+            echo "=== Navigating to app/api ==="
+            cd app/api
+            pwd
+            
+            echo "=== Current git status BEFORE pull ==="
+            git status
+            git log -1 --oneline
+            
+            echo "=== Pulling latest changes ==="
+            git pull
+            
+            echo "=== Git status AFTER pull ==="
+            git status
+            git log -1 --oneline
+            
+            echo "=== Checking if service exists ==="
+            systemctl list-units --type=service | grep fastapi || echo "Service not found!"
+            
+            echo "=== Restarting FastAPI service ==="
+            echo '${{ secrets.SUDO_PASSWORD }}' | sudo -S systemctl restart fastapi
+            
+            echo "=== Service status ==="
+            echo '${{ secrets.SUDO_PASSWORD }}' | sudo -S systemctl status fastapi --no-pager
+            
+            echo "=== Recent service logs ==="
+            echo '${{ secrets.SUDO_PASSWORD }}' | sudo -S journalctl -u fastapi -n 20 --no-pager
+          ENDSSH
+            
