remove custom service22

--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -43,6 +43,7 @@ jobs:
             # Pull latest code
             git pull
 
+            source ../venv/bin/activate
             alembic upgrade head
             
             # Stop and remove old containers
