--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   frontend:
     build: 
       context: ./frontend
-      dockerfile: Dockerfile
+      dockerfile: ./frontend/Dockerfile
     ports:
       - 80:80
     depends_on:
@@ -12,8 +12,8 @@ services:
 
   api:
     build: 
-      context: .
-      dockerfile: Dockerfile
+      context: ./app
+      dockerfile: ./app/Dockerfile
     depends_on:
       - postgres
     ports: 
