--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 services: 
   frontend:
     build: 
-      context: ./frontend
+      context: .
       dockerfile: ./frontend/Dockerfile
     ports:
       - 80:80
