remove custom service5

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
 
   api:
     build: 
-      context: ./app
+      context: .
       dockerfile: ./app/Dockerfile
     depends_on:
       - postgres
