--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,6 +2,7 @@ FROM node:18-alpine AS build
 WORKDIR /app
 COPY package*.json ./
 COPY ./frontend/public ./public
+COPY ./frontend/src ./src
 RUN npm install
 COPY . .
 RUN npm run build
