--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
     restart: unless-stopped
 
   postgres:
-    image: postgres
+    image: postgres:15-alpine  # ← Changed from 'postgres' to 'postgres:15-alpine'
     environment:
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
       - POSTGRES_DB=${DATABASE_NAME}
