--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,13 +18,18 @@ services:
       - postgres
     ports: 
       - 8000:8000
-    env_file:
-      - .env
+    environment:
+      - DATABASE_HOST=postgres
+      - DATABASE_PORT=5432
+      - DATABASE_USER=postgres
+      - DATABASE_NAME=${DATABASE_NAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
     restart: unless-stopped
 
   postgres:
-    image: postgres:15-alpine  # ← Changed from 'postgres' to 'postgres:15-alpine'
+    image: postgres:15-alpine
     environment:
+      - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
       - POSTGRES_DB=${DATABASE_NAME}
     volumes:
